// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches data correctly for "GET" request 1`] = `
Object {
  "message": "Mocked data for fetchData \\"GET\\" request",
  "status": 200,
}
`;

exports[`fetches data correctly for "POST" request 1`] = `
Object {
  "message": "Mocked data for fetchData \\"POST\\" request",
  "status": 200,
}
`;

exports[`fetches data correctly when no method is provided 1`] = `
Object {
  "message": "Mocked data for fetchData \\"GET\\" request",
  "status": 200,
}
`;

exports[`returns an empty object when request contains no channel id 1`] = `Object {}`;

exports[`returns error object when request fails 1`] = `
Object {
  "error": true,
  "status": 500,
}
`;
